# lavtype

./: .gitignore  Cargo.toml  LICENSE  Packager.toml  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
assets/icons/: lavtype.icns
packaging/linux/: lavtype.desktop
packaging/macos/: Info.plist  entitlements.plist
scripts/: release.sh  sign-macos-dmg.sh
src/: app.rs  audio.rs  hotkey.rs  lib.rs  main.rs  output.rs  settings.rs  tray.rs
src/models/: mod.rs  parakeet.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/transcription/: apple.rs  mod.rs  parakeet.rs
tests/: parakeet_e2e.rs
